sys/dev/usb/ucom.c
@@ -1,4 +1,4 @@
-/*	$NetBSD: ucom.c,v 1.95 2012/01/14 20:41:49 jakllsch Exp $	*/
+/*	$NetBSD: ucom.c,v 1.96 2012/01/14 20:51:00 jakllsch Exp $	*/
 
 /*
  * Copyright (c) 1998, 2000 The NetBSD Foundation, Inc.
@@ -34,7 +34,7 @@
  */
 
 #include <sys/cdefs.h>
-__KERNEL_RCSID(0, "$NetBSD: ucom.c,v 1.95 2012/01/14 20:41:49 jakllsch Exp $");
+__KERNEL_RCSID(0, "$NetBSD: ucom.c,v 1.96 2012/01/14 20:51:00 jakllsch Exp $");
 
 #include <sys/param.h>
 #include <sys/systm.h>
@@ -369,6 +369,10 @@ ucomopen(dev_t dev, int flag, int mode, struct lwp *l)
 	struct tty *tp;
 	int s, i;
 	int error;
+
+	/* XXX This is a hopefully temporary stopgap for kern/42848. */
+	if ((flag & (FREAD|FWRITE)) != (FREAD|FWRITE))
+		return (EINVAL);
 
 	if (sc == NULL)
 		return (ENXIO);
